New feture added

--- a/Movies.html
+++ b/Movies.html
@@ -32,7 +32,8 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam accusamus at quia voluptatum soluta
                 sapiente nesciunt, repudiandae dolorem non quae! Dicta aliquid maiores repudiandae atque quae nihil
                 nulla suscipit ratione! </p><br>
-            <button>Go to Home</button>
+            <button class="button"><a style="text-decoration: none;
+            color: red;" href="Menupage.html">Go to Home</a></button>
         </div>
     </div>
 </body>
